--- a/index.html
+++ b/index.html
@@ -92,5 +92,60 @@
         </nav>
     </header>
     
+    <main class="container">
+
+        <div class="row" id="listado_items">
+
+        </div>
+
+
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content" id="modalContent">
+                    <div class="loading" id="loading">
+                        <img src="loading.gif" class="img-fluid" alt="" style="max-width: 60px;">
+                    </div>
+                    <div class="modal-header">
+                        <h2 class="modal-title fs-5" id="titulo">Modal title</h2>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body container" id="contenido">
+                        <div class="row">
+                            <img id="img" src="" alt="Imagen del episodio" class="col-md-6">
+                            <div class="col-md-4">
+                                <div id="temporada" class="col-md"> </div>
+                                <div id="episodio" class="col-md"> </div>
+                                <div id="rating" class="col-md"> </div>
+                            </div>
+                            <div id="descripcion"> </div>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+    </main>
+
+
+
+
+
+
+
+    <script src="https://unpkg.com/dexie/dist/dexie.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
+    <script src="script.js"></script>
+
+
+
 </body>
 </html>
