--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     </div>
                     <div class="modal-body container" id="contenido">
                         <div class="row">
-                            <img id="img" src="" alt="Imagen del episodio" class="col-md-6">
+                            <img id="img" src="#" alt="Imagen del episodio" class="col-md-6">
                             <div class="col-md-4">
                                 <div id="temporada" class="col-md"> </div>
                                 <div id="episodio" class="col-md"> </div>
