--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <div class="modal-dialog modal-dialog-centered">
                 <div class="modal-content" id="modalContent">
                     <div class="loading" id="loading">
-                        <img src="loading.gif" class="img-fluid" alt="" style="max-width: 60px;">
+                        <img src="loading.gif" class="img-fluid" alt="cargando" style="max-width: 60px;">
                     </div>
                     <div class="modal-header">
                         <h2 class="modal-title fs-5" id="titulo">Modal title</h2>
